Package_Tools/include-C/sokol/util/fertig/sokol_spine.h

typedef struct sspine_atlas { uint32_t id; } sspine_atlas;
typedef struct sspine_skeleton { uint32_t id; } sspine_skeleton;
typedef struct sspine_instance { uint32_t id; } sspine_instance;
typedef struct sspine_atlas_page { uint32_t atlas_id; int index; } sspine_atlas_page;
typedef struct sspine_anim { uint32_t skeleton_id; int index; } sspine_anim;
typedef struct sspine_bone { uint32_t skeleton_id; int index; } sspine_bone;
typedef struct sspine_slot { uint32_t skeleton_id; int index; } sspine_slot;
typedef struct sspine_event { uint32_t skeleton_id; int index; } sspine_event;
typedef struct sspine_iktarget { uint32_t skeleton_id; int index; } sspine_iktarget;
typedef struct sspine_skin { uint32_t skeleton_id; int index; } sspine_skin;
typedef struct sspine_vec2 { float x, y; } sspine_vec2;
typedef sg_color sspine_color;
typedef struct sspine_bone_transform {
    sspine_vec2 position;
    float rotation;         // in degrees
    sspine_vec2 scale;
    sspine_vec2 shear;      // in degrees
} sspine_bone_transform;
typedef struct sspine_atlas_page_info {
    bool valid;
    sspine_atlas atlas;
    sspine_image_info image;
    sspine_atlas_overrides overrides;
} sspine_atlas_page_info;
typedef struct sspine_anim_info {
    bool valid;
    int index;
    float duration;
    sspine_string name;
} sspine_anim_info;
typedef struct sspine_bone_info {
    bool valid;
    int index;
    sspine_bone parent_bone;
    float length;
    sspine_bone_transform pose;
    sspine_color color;
    sspine_string name;
} sspine_bone_info;
typedef struct sspine_slot_info {
    bool valid;
    int index;
    sspine_bone bone;
    sspine_color color;
    sspine_string attachment_name;
    sspine_string name;
} sspine_slot_info;
typedef struct sspine_iktarget_info {
    bool valid;
    int index;
    sspine_bone target_bone;
    sspine_string name;
} sspine_iktarget_info;
typedef struct sspine_skin_info {
    bool valid;
    int index;
    sspine_string name;
} sspine_skin_info;
typedef struct sspine_event_info {
    bool valid;
    int index;
    int int_value;
    float float_value;
    float volume;
    float balance;
    sspine_string name;
    sspine_string string_value;
    sspine_string audio_path;
} sspine_event_info;
// atlas page functions
extern int sspine_num_atlas_pages(sspine_atlas atlas);
extern sspine_atlas_page sspine_atlas_page_by_index(sspine_atlas atlas, int index);
extern bool sspine_atlas_page_valid(sspine_atlas_page page);
extern bool sspine_atlas_page_equal(sspine_atlas_page first, sspine_atlas_page second);
extern sspine_atlas_page_info sspine_get_atlas_page_info(sspine_atlas_page page);
// instance transform functions
extern void sspine_set_position(sspine_instance instance, sspine_vec2 position);
extern void sspine_set_scale(sspine_instance instance, sspine_vec2 scale);
extern void sspine_set_color(sspine_instance instance, sspine_color color);
extern sspine_vec2 sspine_get_position(sspine_instance instance);
extern sspine_vec2 sspine_get_scale(sspine_instance instance);
extern sspine_color sspine_get_color(sspine_instance instance);
// instance animation functions
extern int sspine_num_anims(sspine_skeleton skeleton);
extern sspine_anim sspine_anim_by_name(sspine_skeleton skeleton, const char* name);
extern sspine_anim sspine_anim_by_index(sspine_skeleton skeleton, int index);
extern bool sspine_anim_valid(sspine_anim anim);
extern bool sspine_anim_equal(sspine_anim first, sspine_anim second);
extern sspine_anim_info sspine_get_anim_info(sspine_anim anim);
extern void sspine_clear_animation_tracks(sspine_instance instance);
extern void sspine_clear_animation_track(sspine_instance instance, int track_index);
extern void sspine_set_animation(sspine_instance instance, sspine_anim anim, int track_index, bool loop);
extern void sspine_add_animation(sspine_instance instance, sspine_anim anim, int track_index, bool loop, float delay);
extern void sspine_set_empty_animation(sspine_instance instance, int track_index, float mix_duration);
extern void sspine_add_empty_animation(sspine_instance instance, int track_index, float mix_duration, float delay);
// bone functions
extern int sspine_num_bones(sspine_skeleton skeleton);
extern sspine_bone sspine_bone_by_name(sspine_skeleton skeleton, const char* name);
extern sspine_bone sspine_bone_by_index(sspine_skeleton skeleton, int index);
extern bool sspine_bone_valid(sspine_bone bone);
extern bool sspine_bone_equal(sspine_bone first, sspine_bone second);
extern sspine_bone_info sspine_get_bone_info(sspine_bone bone);
extern void sspine_set_bone_transform(sspine_instance instance, sspine_bone bone, const sspine_bone_transform* transform);
extern void sspine_set_bone_position(sspine_instance instance, sspine_bone bone, sspine_vec2 position);
extern void sspine_set_bone_rotation(sspine_instance instance, sspine_bone bone, float rotation);
extern void sspine_set_bone_scale(sspine_instance instance, sspine_bone bone, sspine_vec2 scale);
extern void sspine_set_bone_shear(sspine_instance instance, sspine_bone bone, sspine_vec2 shear);
extern sspine_bone_transform sspine_get_bone_transform(sspine_instance instance, sspine_bone bone);
extern sspine_vec2 sspine_get_bone_position(sspine_instance instance, sspine_bone bone);
extern float sspine_get_bone_rotation(sspine_instance instance, sspine_bone bone);
extern sspine_vec2 sspine_get_bone_scale(sspine_instance instance, sspine_bone bone);
extern sspine_vec2 sspine_get_bone_shear(sspine_instance instance, sspine_bone bone);
extern sspine_vec2 sspine_get_bone_world_position(sspine_instance instance, sspine_bone bone);
extern sspine_vec2 sspine_bone_local_to_world(sspine_instance instance, sspine_bone bone, sspine_vec2 local_pos);
extern sspine_vec2 sspine_bone_world_to_local(sspine_instance instance, sspine_bone bone, sspine_vec2 world_pos);
// slot functions
extern int sspine_num_slots(sspine_skeleton skeleton);
extern sspine_slot sspine_slot_by_name(sspine_skeleton skeleton, const char* name);
extern sspine_slot sspine_slot_by_index(sspine_skeleton skeleton, int index);
extern bool sspine_slot_valid(sspine_slot slot);
extern bool sspine_slot_equal(sspine_slot first, sspine_slot second);
extern sspine_slot_info sspine_get_slot_info(sspine_slot slot);
extern void sspine_set_slot_color(sspine_instance instance, sspine_slot slot, sspine_color color);
extern sspine_color sspine_get_slot_color(sspine_instance instance, sspine_slot slot);
// event functions
extern int sspine_num_events(sspine_skeleton skeleton);
extern sspine_event sspine_event_by_name(sspine_skeleton skeleton, const char* name);
extern sspine_event sspine_event_by_index(sspine_skeleton skeleton, int index);
extern bool sspine_event_valid(sspine_event event);
extern bool sspine_event_equal(sspine_event first, sspine_event second);
extern sspine_event_info sspine_get_event_info(sspine_event event);
// ik target functions
extern int sspine_num_iktargets(sspine_skeleton skeleton);
extern sspine_iktarget sspine_iktarget_by_name(sspine_skeleton skeleton, const char* name);
extern sspine_iktarget sspine_iktarget_by_index(sspine_skeleton skeleton, int index);
extern bool sspine_iktarget_valid(sspine_iktarget iktarget);
extern bool sspine_iktarget_equal(sspine_iktarget first, sspine_iktarget second);
extern sspine_iktarget_info sspine_get_iktarget_info(sspine_iktarget iktarget);
extern void sspine_set_iktarget_world_pos(sspine_instance instance, sspine_iktarget iktarget, sspine_vec2 world_pos);
// skin functions
extern int sspine_num_skins(sspine_skeleton skeleton);
extern sspine_skin sspine_skin_by_name(sspine_skeleton skeleton, const char* name);
extern sspine_skin sspine_skin_by_index(sspine_skeleton skeleton, int index);
extern bool sspine_skin_valid(sspine_skin skin);
extern bool sspine_skin_equal(sspine_skin first, sspine_skin second);
extern sspine_skin_info sspine_get_skin_info(sspine_skin skin);
extern void sspine_set_skin(sspine_instance instance, sspine_skin skin);