Package_no_Ubuntu/sokol_03.2026/sokol/util/sokol_spine.inc


function sspine_num_atlas_pages(atlas: Tsspine_atlas): longint; cdecl; external libsokol;
function sspine_atlas_page_by_index(atlas: Tsspine_atlas; index: longint): Tsspine_atlas_page; cdecl; external libsokol;
function sspine_atlas_page_valid(page: Tsspine_atlas_page): Boolean; cdecl; external libsokol;
function sspine_atlas_page_equal(first: Tsspine_atlas_page; second: Tsspine_atlas_page): Boolean; cdecl; external libsokol;
function sspine_get_atlas_page_info(page: Tsspine_atlas_page): Tsspine_atlas_page_info; cdecl; external libsokol;

procedure sspine_set_position(instance: Tsspine_instance; position: Tsspine_vec2); cdecl; external libsokol;
procedure sspine_set_scale(instance: Tsspine_instance; scale: Tsspine_vec2); cdecl; external libsokol;
procedure sspine_set_color(instance: Tsspine_instance; color: Tsspine_color); cdecl; external libsokol;
function sspine_get_position(instance: Tsspine_instance): Tsspine_vec2; cdecl; external libsokol;
function sspine_get_scale(instance: Tsspine_instance): Tsspine_vec2; cdecl; external libsokol;
function sspine_get_color(instance: Tsspine_instance): Tsspine_color; cdecl; external libsokol;

function sspine_num_anims(skeleton: Tsspine_skeleton): longint; cdecl; external libsokol;
function sspine_anim_by_name(skeleton: Tsspine_skeleton; name: pchar): Tsspine_anim; cdecl; external libsokol;
function sspine_anim_by_index(skeleton: Tsspine_skeleton; index: longint): Tsspine_anim; cdecl; external libsokol;
function sspine_anim_valid(anim: Tsspine_anim): Boolean; cdecl; external libsokol;
function sspine_anim_equal(first: Tsspine_anim; second: Tsspine_anim): Boolean; cdecl; external libsokol;
function sspine_get_anim_info(anim: Tsspine_anim): Tsspine_anim_info; cdecl; external libsokol;
procedure sspine_clear_animation_tracks(instance: Tsspine_instance); cdecl; external libsokol;
procedure sspine_clear_animation_track(instance: Tsspine_instance; track_index: longint); cdecl; external libsokol;
procedure sspine_set_animation(instance: Tsspine_instance; anim: Tsspine_anim; track_index: longint; loop: Boolean); cdecl; external libsokol;
procedure sspine_add_animation(instance: Tsspine_instance; anim: Tsspine_anim; track_index: longint; loop: Boolean; delay: single); cdecl; external libsokol;
procedure sspine_set_empty_animation(instance: Tsspine_instance; track_index: longint; mix_duration: single); cdecl; external libsokol;
procedure sspine_add_empty_animation(instance: Tsspine_instance; track_index: longint; mix_duration: single; delay: single); cdecl; external libsokol;

function sspine_num_bones(skeleton: Tsspine_skeleton): longint; cdecl; external libsokol;
function sspine_bone_by_name(skeleton: Tsspine_skeleton; name: pchar): Tsspine_bone; cdecl; external libsokol;
function sspine_bone_by_index(skeleton: Tsspine_skeleton; index: longint): Tsspine_bone; cdecl; external libsokol;
function sspine_bone_valid(bone: Tsspine_bone): Boolean; cdecl; external libsokol;
function sspine_bone_equal(first: Tsspine_bone; second: Tsspine_bone): Boolean; cdecl; external libsokol;
function sspine_get_bone_info(bone: Tsspine_bone): Tsspine_bone_info; cdecl; external libsokol;
procedure sspine_set_bone_transform(instance: Tsspine_instance; bone: Tsspine_bone; transform: Psspine_bone_transform); cdecl; external libsokol;
procedure sspine_set_bone_position(instance: Tsspine_instance; bone: Tsspine_bone; position: Tsspine_vec2); cdecl; external libsokol;
procedure sspine_set_bone_rotation(instance: Tsspine_instance; bone: Tsspine_bone; rotation: single); cdecl; external libsokol;
procedure sspine_set_bone_scale(instance: Tsspine_instance; bone: Tsspine_bone; scale: Tsspine_vec2); cdecl; external libsokol;
procedure sspine_set_bone_shear(instance: Tsspine_instance; bone: Tsspine_bone; shear: Tsspine_vec2); cdecl; external libsokol;
function sspine_get_bone_transform(instance: Tsspine_instance; bone: Tsspine_bone): Tsspine_bone_transform; cdecl; external libsokol;
function sspine_get_bone_position(instance: Tsspine_instance; bone: Tsspine_bone): Tsspine_vec2; cdecl; external libsokol;
function sspine_get_bone_rotation(instance: Tsspine_instance; bone: Tsspine_bone): single; cdecl; external libsokol;
function sspine_get_bone_scale(instance: Tsspine_instance; bone: Tsspine_bone): Tsspine_vec2; cdecl; external libsokol;
function sspine_get_bone_shear(instance: Tsspine_instance; bone: Tsspine_bone): Tsspine_vec2; cdecl; external libsokol;
function sspine_get_bone_world_position(instance: Tsspine_instance; bone: Tsspine_bone): Tsspine_vec2; cdecl; external libsokol;
function sspine_bone_local_to_world(instance: Tsspine_instance; bone: Tsspine_bone; local_pos: Tsspine_vec2): Tsspine_vec2; cdecl; external libsokol;
function sspine_bone_world_to_local(instance: Tsspine_instance; bone: Tsspine_bone; world_pos: Tsspine_vec2): Tsspine_vec2; cdecl; external libsokol;

function sspine_num_slots(skeleton: Tsspine_skeleton): longint; cdecl; external libsokol;
function sspine_slot_by_name(skeleton: Tsspine_skeleton; name: pchar): Tsspine_slot; cdecl; external libsokol;
function sspine_slot_by_index(skeleton: Tsspine_skeleton; index: longint): Tsspine_slot; cdecl; external libsokol;
function sspine_slot_valid(slot: Tsspine_slot): Boolean; cdecl; external libsokol;
function sspine_slot_equal(first: Tsspine_slot; second: Tsspine_slot): Boolean; cdecl; external libsokol;
function sspine_get_slot_info(slot: Tsspine_slot): Tsspine_slot_info; cdecl; external libsokol;
procedure sspine_set_slot_color(instance: Tsspine_instance; slot: Tsspine_slot; color: Tsspine_color); cdecl; external libsokol;
function sspine_get_slot_color(instance: Tsspine_instance; slot: Tsspine_slot): Tsspine_color; cdecl; external libsokol;

function sspine_num_events(skeleton: Tsspine_skeleton): longint; cdecl; external libsokol;
function sspine_event_by_name(skeleton: Tsspine_skeleton; name: pchar): Tsspine_event; cdecl; external libsokol;
function sspine_event_by_index(skeleton: Tsspine_skeleton; index: longint): Tsspine_event; cdecl; external libsokol;
function sspine_event_valid(event: Tsspine_event): Boolean; cdecl; external libsokol;
function sspine_event_equal(first: Tsspine_event; second: Tsspine_event): Boolean; cdecl; external libsokol;
function sspine_get_event_info(event: Tsspine_event): Tsspine_event_info; cdecl; external libsokol;

function sspine_num_iktargets(skeleton: Tsspine_skeleton): longint; cdecl; external libsokol;
function sspine_iktarget_by_name(skeleton: Tsspine_skeleton; name: pchar): Tsspine_iktarget; cdecl; external libsokol;
function sspine_iktarget_by_index(skeleton: Tsspine_skeleton; index: longint): Tsspine_iktarget; cdecl; external libsokol;
function sspine_iktarget_valid(iktarget: Tsspine_iktarget): Boolean; cdecl; external libsokol;
function sspine_iktarget_equal(first: Tsspine_iktarget; second: Tsspine_iktarget): Boolean; cdecl; external libsokol;
function sspine_get_iktarget_info(iktarget: Tsspine_iktarget): Tsspine_iktarget_info; cdecl; external libsokol;
procedure sspine_set_iktarget_world_pos(instance: Tsspine_instance; iktarget: Tsspine_iktarget; world_pos: Tsspine_vec2); cdecl; external libsokol;

function sspine_num_skins(skeleton: Tsspine_skeleton): longint; cdecl; external libsokol;
function sspine_skin_by_name(skeleton: Tsspine_skeleton; name: pchar): Tsspine_skin; cdecl; external libsokol;
function sspine_skin_by_index(skeleton: Tsspine_skeleton; index: longint): Tsspine_skin; cdecl; external libsokol;
function sspine_skin_valid(skin: Tsspine_skin): Boolean; cdecl; external libsokol;
function sspine_skin_equal(first: Tsspine_skin; second: Tsspine_skin): Boolean; cdecl; external libsokol;
function sspine_get_skin_info(skin: Tsspine_skin): Tsspine_skin_info; cdecl; external libsokol;
procedure sspine_set_skin(instance: Tsspine_instance; skin: Tsspine_skin); cdecl; external libsokol;

// === Konventiert am: 24-3-26 13:40:14 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
